# learn_cpp_in_30_minutes

./: .gitignore  README.md
01_A_tour_of_C++/01_c_compile_with_cmake[option]/: CMakeLists.txt  readme.md
01_A_tour_of_C++/01_c_compile_with_cmake[option]/src/: hello1.cpp
02_data_object/: 02_a_how_to_store_data_in_computer.md  02_b_general_data_type_in_cpp.cpp  02_b_general_data_type_in_cpp.md
03_condition_and_loop_statement/: 03_a_expression_and_statement.md  statements.cpp
04_function/: 04_a_function_basics.md  04_b_passing_by_reference.md  04_c_passing_by_pointer.md  04_d_funtion_templates.md  05_e_const_qualifier.md
05_memory_model_and_namespace/: 05_a_storage_duration_scope_and_linkage.md  05_b_separate_compilation_and_header_file.md  05_c_namespace.md
06_objects_and_classes/: 06_a_abstraction_and_classes.md  06_b_class_contructors_and_destructors.md  06_c_const_member_function_and_this_pointer.md
07_class_inheritance/: 07_a_derive_a_class.md  07_b_polymorphic_and_dynamic_binding.md  07_c_abstract_base_class.md
08_data_structure_in_cpp/: object_initialization_in_cpp.md
08_data_structure_in_cpp/a_array/: array.cpp
10_notes/: Resource Management in C++.md  essentially_understand_Pointers_References_and_Dynamic_Momory_Allocation.md  essentially_understand_const_key_word.md  essentially_understand_lvalue_and_rvalue.md  exception_handling_strategy.md  readme.md  understand_smart_pointer_in_c++.md
11_design_principle_and_patterns/: Abstract oriented programming.ipynb  The PIMPL idiom.ipynb
data_structure_in_cpp/: object_initialization_in_cpp.md
(+65 files in other folders)
